<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.SellerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#F5F5F5">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:orientation="vertical">

         <TextView
             android:id="@+id/seller_name"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:text="@string/seller_name"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@android:color/black" />

         <TextView
             android:id="@+id/seller_total_sales"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
             android:fontFamily="monospace"
             android:text="@string/seller_total_sales"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             android:textColor="@android:color/background_dark" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:orientation="horizontal"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
             >

             <View
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
                 android:background="#FFE7E5">

             </View>

             <View
                 android:layout_width="70dp"
                 android:layout_height="20dp"
                 android:background="#FFF4E6">

             </View>

             <View
                 android:layout_width="70dp"
                 android:layout_height="20dp"
                 android:background="#FFFDE5">

             </View>

             <View
                 android:layout_width="70dp"
                 android:layout_height="20dp"
                 android:background="#F3FEE0">

             </View>

             <View
                 android:layout_width="70dp"
                 android:layout_height="20dp"
                 android:background="#37B54B">

             </View>

         </LinearLayout>

         <TextView
             android:id="@+id/seller_category"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:text="@string/seller_category"
             android:textColor="#37B54B"
             android:textAlignment="center"
             android:gravity="center"/>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:paddingBottom="20dp"
             android:background="#FFFFFF"
             android:orientation="vertical">

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:text="@string/seller_opinions"
                 android:textColor="@android:color/background_dark"
                 android:layout_marginLeft="5dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="5dp"/>

             <TextView
                 android:id="@+id/seller_total_opinions"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginBottom="5dp"
                 android:text="@string/seller_total_opinions"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">

                 <ProgressBar
                     android:id="@+id/seller_good_opinions"
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:progress="97"
                     android:progressBackgroundTint="#3383FA"
                     android:progressTint="#3383FA"
                     />

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/buena"
                     android:layout_marginLeft="15dp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">

                 <ProgressBar
                     android:id="@+id/seller_regular_opinions"
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:progress="3"
                     android:progressBackgroundTint="#3383FA"
                     android:progressTint="#3383FA"
                     />

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Regular"
                     android:layout_marginLeft="15dp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">

                 <ProgressBar
                     android:id="@+id/seller_bad_opinions"
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:progress="0"
                     android:progressBackgroundTint="#3383FA"
                     android:progressTint="#3383FA"
                     />

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Mala"
                     android:layout_marginLeft="15dp"/>
             </LinearLayout>
            </LinearLayout>
         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:paddingBottom="20dp">

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:text="@string/seller_location_tittle"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"/>

             <TextView
                 android:id="@+id/seller_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/seller_location"
                 android:textColor="@android:color/background_dark"
                 android:layout_marginBottom="20dp"/>

         </LinearLayout>

     </LinearLayout>

    </LinearLayout>
</LinearLayout>